[gd_scene load_steps=4 format=3 uid="uid://danpioyt3oeeo"]

[ext_resource type="Script" uid="uid://drb0c8ycvqkti" path="res://Scripts/options_menu.gd" id="1_plplt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plplt"]
bg_color = Color(0.3403393, 0.34033936, 0.34033918, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7yma"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plplt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_plplt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_right = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Options" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Video" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Video"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenToggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_y7yma")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Audio" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Audio"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 24
columns = 2

[node name="Master" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Music" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Sound Effects" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound Effects"

[node name="SoundEffectSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64

[node name="Back" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "Back"

[node name="MainMenu" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Main Menu"

[connection signal="toggled" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/FullscreenToggle" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer/SoundEffectSlider" to="." method="_on_sound_effect_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
